# imgseries

./: .gitignore  Analysis_ContourTracking.ipynb  Analysis_Front1D.ipynb  Analysis_GreyLevel.ipynb  ContourTracking.ipynb  Customize_Analysis.ipynb  Examples_ContourTracking.ipynb  Examples_Front1D.ipynb  Examples_GreyLevel.ipynb  Examples_ImgSeries.ipynb  Examples_ImgSeries_Interactive.ipynb  Examples_ImgSeries_Static.ipynb  Export.ipynb  Front1D.ipynb  GreyLevel.ipynb  ImgSeries_Caching.ipynb  ImgSeries_Interactive.ipynb  ImgSeries_Static.ipynb  MANIFEST.in  README.md  pyproject.toml  setup.cfg
data/: Img_ContourTracking.json  Img_ContourTracking.tsv  Img_ContourTracking_Data.json  Img_ContourTracking_RawContourData.json  Img_Display.json  Img_Files.tsv  Img_Front1D.json  Img_Front1D.tsv  Img_GreyLevel.json  Img_GreyLevel.tsv  Img_GreyLevel_SavingTest.json  Img_GreyLevel_SavingTest.tsv  Img_Transform.json
data/for-tests-do-not-modify/: FlickFront_FlickerData.json  FlickFront_FlickerData.tsv  Img_ContourTracking.json  Img_ContourTracking.tsv  Img_ContourTracking_RawContourData.json  Img_ContourTracking_Saved.json  Img_ContourTracking_Saved.tsv  Img_Display.json  Img_GreyLevel.json  Img_GreyLevel_Saved.json  Img_Transform.json
data/for-tests-do-not-modify/stack/: Img_GreyLevel.json  Img_GreyLevel.tsv
data/untracked_data/: Img_ContourTracking.json  Img_Flicker.json  Img_Flicker.tsv  Img_Front1D.json  Img_GreyLevel.json  Img_GreyLevel_SavingTest.json  Img_GreyLevel_SavingTest.tsv
examples/: Analysis_ContourTracking.ipynb  Analysis_Flicker.ipynb  Analysis_Front1D.ipynb  Customize_Analysis.ipynb  Customize_Images.ipynb  Export.ipynb  ImgSeries_Static.ipynb
examples/data/for-tests-do-not-modify/: FlickFront_FrontData.json  FlickFront_FrontData.tsv  FlickFront_Transform.json  Img_ContourTracking.hdf5  Img_ContourTracking.json  Img_ContourTracking.tsv  Img_ContourTracking_Coords.hdf5  Img_ContourTracking_Coords.json  Img_ContourTracking_Saved.tsv  Img_ContourTracking_Saved_RawContourData.json  Img_Files_Rounded.tsv  Img_GreyLevel.json  Img_GreyLevel.tsv  Img_GreyLevel_Saved.tsv  Img_Transform_ImgSeriesNotebook.json
examples/data/for-tests-do-not-modify/stack/: Img_ContourTracking.hdf5  Img_ContourTracking.json  Img_ContourTracking.tsv  Img_ContourTracking_Coords.json  Img_GreyLevel.json  Img_GreyLevel.tsv
examples/data/stack/: Img_ContourTracking.tsv
examples/data/video/: video.avi
examples/examples_analysis/: Analysis_ContourTracking.ipynb  Analysis_Flicker.ipynb  Analysis_Front1D.ipynb  Analysis_GreyLevel.ipynb  ContourTracking.ipynb  ContourTracking_Interactive.ipynb  Flicker.ipynb  Flicker_Interactive.ipynb  Front1D.ipynb  Front1D_interactive.ipynb  GreyLevel.ipynb  GreyLevel_Interactive.ipynb
examples/examples_customize/: Customize_Analysis.ipynb  Customize_Images.ipynb  Customize_Transforms.ipynb
examples/examples_image_series/: ImgSeries_Caching.ipynb  ImgSeries_Export.ipynb  ImgSeries_General.ipynb  ImgSeries_Interactive.ipynb  ImgSeries_Static.ipynb
examples/examples_legacy/: Legacy.ipynb
imgseries/: __init__.py  analysis.py  config.py  contour_tracking.py  contours.py  fileio.py  front_1d.py  general.py  grey_level.py  image_parameters.py  image_series.py  image_transform.py  imbibitionfront_tracking.py  legacy.py  line_profile.py  managers.py  plot.py  plots.py  process.py  profile.py  readers.py  viewers.py
imgseries.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
imgseries/analysis/: __init__.py  analysis_base.py  contour_tracking.py  flicker.py  formatters.py  front_1d.py  general.py  grey_level.py  results.py
imgseries/parameters/: __init__.py  analysis.py  correction.py  display.py  parameters_base.py  transform.py
imgseries/series/: __init__.py  export.py  general.py  image_base.py  image_sequence.py  image_series.py  image_stacks.py  line_profile.py
tests/: test_contour_tracking.py  test_flicker.py  test_grey_level.py  test_image_series.py  test_series.py
