[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "imgseries"
authors = [
    {name = "Olivier Vincent", email = "ovinc.py@gmail.com"},
]
description = "Image inspection and analysis tools for image series."
readme = "README.md"
requires-python = ">= 3.6"

keywords = [
    "image",
    "analysis",
    "inspection",
    "series",
    "contour",
    "tracking",
    "grey",
    "level",
    "gray",
    'stack',
    'video',
]

license = {text = "CeCILL-2.1"}

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
]

dependencies = [
    "scikit-image",
    "matplotlib",
    "numpy",
    "importlib-metadata",
    "tqdm",
    "filo >= 2.2.0",
    "imgbasics >= 0.4.1",
    "drapo >= 1.2.1",
    "h5py",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ovinc/imgseries"
Documentation = "https://github.com/ovinc/imgseries/README.md"
Repository = "https://github.com/ovinc/imgseries.git"

[project.optional-dependencies]
avi = ["pims", "av"]  # avi video loading
git = ["gittools >= 0.5"]    # git saving of code metadata

[tool.setuptools.packages.find]
exclude = ["examples",]

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools-scm
