[metadata]
name = imgseries
author = Olivier Vincent
author_email = olivier.vincent@univ-lyon1.fr
url = https://cameleon.univ-lyon1.fr/ovincent/imgseries
description = Image analysis tools for image series
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = image, analysis, series, contour, tracking, grey, level, gray
license_files = LICENSE
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    scikit-image
    matplotlib
    numpy
    tqdm
    importlib-metadata
    imgbasics >= 0.0.3
    filo >= 1.1
    gittools >= 0.5
    drapo >= 1.0.5
setup_requires =
    setuptools_scm
python_requires =
    >=3.6
