[metadata]
name = imgseries
author = Olivier Vincent
author_email = ovinc.py@gmail.com
url = https://github.com/ovinc/imgseries
description = Image inspection and analysis tools for image series
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = image, analysis, series, contour, tracking, grey, level, gray
license_files = LICENSE
license = CeCILL-2.1
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    scikit-image
    matplotlib
    numpy
    tqdm
    importlib-metadata
    imgbasics >= 0.3.0
    filo >= 1.1
    gittools >= 0.5
    drapo >= 1.2.1
setup_requires =
    setuptools_scm
python_requires =
    >=3.6
